--- a/style.css
+++ b/style.css
@@ -6,3 +6,43 @@
   color: #2c3e50;
   margin-top: 60px;
 }
+
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+}
+
+:root {
+  /* Colors */
+  --primary-color: #b1ede8;
+  --secondary-color: #ff6978;
+  --text-color: #fffcf9;
+  --background-color: #f6f9fe;
+  --border-color: #6d435a;
+
+  /* Border */
+  --border-radius: 0.5rem;
+
+  /* Misc */
+  --transition-delay: 0.2s;
+}
+
+html {
+  font-size: 112.5%;
+}
+
+body {
+  margin: 0;
+  background: var(--background-color);
+  color: var(--text-color);
+}
+
+.hero__img {
+  height: 14em;
+  background-color: #f6f9fe;
+}
+
+.input:placeholder {
+  border-bottom: none;
+}
